# Puzzle

./: .gitignore  CLAUDE.md  Cargo.toml
src/: contour_with_dir.rs  cv_utils.rs  draw.rs  main.rs  not_used_fn.rs  puzzle_piece.rs  single_contour_params.rs  utils.rs
