[package]
name = "read_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
glob = "0.3.1"
image = "0.24.7"
itertools = "0.12.0"
ndarray = "0.15.6"
opencv = "0.88.6"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
